@startuml ¿Amor? Depende de ti

enum GameState {
    COVER
    INPUT_NAME
    INPUT_GENDER
    INPUT_LOVE_NAME
    PLAYING
    PAUSED
    SHOWING_FINAL
    SHOWING_CREDITS
}

struct Option {
    + text : string
    + points : int
    + type : string
}

struct Event {
    + id : int
    + title : string
    + description : string
    + imagePath : string
    + options : vector<Option>
}

struct EventSnapshot {
    + eventId : int
    + totalPoints : int
    + psychopathCount : int
    + eventCount : int
}

class Player {
    - name : string
    - loveInterestName : string
    - gender : string
    - totalPoints : int
    - eventCount : int
    - psychopathCount : int
    --
    + setName(n : string) : void
    + setLoveInterestName(n : string) : void
    + setGender(g : string) : void
    + addPoints(points : int, optionType : string) : void
    + getName() : string
    + getLoveInterestName() : string
    + getGender() : string
    + getTotalPoints() : int
    + getEventCount() : int
    + getPsychopathCount() : int
    + setTotalPoints(p : int) : void
    + setPsychopathCount(c : int) : void
    + setEventCount(c : int) : void
    + getRelationshipType() : string
    + hasPsychopathPath() : bool
}

class EventManager {
    - events : vector<Event>
    --
    + EventManager() : void
    + getEvent(eventId : int) : const Event&
    + getTotalEvents() : int
}

class Game {
    - window : RenderWindow
    - player : Player
    - eventManager : EventManager
    - currentEventId : int
    - state : GameState
    - previousState : GameState
    - font : Font
    - backgroundTexture : Texture
    - backgroundSprite : Sprite
    - lastLoadedImagePath : string
    - optionButtons : vector<RectangleShape>
    - optionTexts : vector<Text>
    - inputBuffer : string
    - music : Music
    - history : stack<EventSnapshot>
    - fadeAlpha : float
    - fadingIn : bool
    - hoveredOption : int
    - hoveredPause : int
    - clock : Clock
    --
    + Game() : void
    + ~Game() : void
    + run() : void
    - loadFont() : bool
    - loadImage(path : string) : bool
    - getEventImagePath(eventId : int) : string
    - getFinalImagePath() : string
    - handleInput() : void
    - update() : void
    - render() : void
    - displayEvent() : void
    - displayFinal() : void
    - displayCredits() : void
}

EventManager *-- "10" Event
Game *-- Player
Game *-- EventManager
Game *-- EventSnapshot
Game --> GameState

@enduml